--- a/public/index.html
+++ b/public/index.html
@@ -7,24 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This is a research project to analyzes the impact of sustainability related topics at some TripAdvisor hotels. The results will be published in two papers answering the three main research questions and deployed on this website showing all the hotel summaries and predicted ratings."
+    />
+    <meta
+      name="authors"
+      content="Esteban Ariza, Johan Giraldo, Mateo Valdes"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Hotel Summary</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
